packages/typ/tests/fixtures/diagnostics/0059_core_pattern_annotation_mismatch_05.ml
let ((epsilon : bool), other_epsilon) = (4, 5)
